--- a/registrar.html
+++ b/registrar.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Desenvolvimento Web 2022 - Registrar</title>
     <link rel="stylesheet" href="css/registrar.css">
+    <link rel="shortcut icon" href="assets/logo/favicon-32x32.png" type="image/x-icon">
 </head>
 
 <body>
