--- a/confirmacao.html
+++ b/confirmacao.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="btn-confirm">
                     <button type="submit" id="confirm" style="cursor: pointer;">
-                       <a href="home-page.html"> Confirmar,</a>
+                       <a href="home-page.html"> Confirmar</a>
                     </button>
                 </div>
             </div>
