--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -41,6 +41,21 @@
                     <div class="img4"></div>
                     <div class="img5"></div>
                 </div>
+
+               
+            </div>
+            <div class="mensagens">
+                <div class="foto-perfil">
+                   
+                </div>
+                <div class="nome-msg">
+                    <h3><Strong style="font-family: Inter;">Nome da pessoa</Strong></h3>
+                    <p style="max-width: 30ch;
+                                overflow: hidden;
+                                text-overflow: ellipsis;
+                                white-space: nowrap;
+                                font-family: Montserrat, sans-serif;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id cum nesciunt aspernatur, atque nisi pariatur eaque optio, hic magni soluta, voluptatum vel provident tenetur perspiciatis architecto. Totam facilis ex natus.</p>
+                </div>
             </div>
         </div>
 
