Correção de posicionamento da navbar

--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -29,7 +29,7 @@
 
         <div class="container-search">
             <div class="search">
-                <input type="text" id="pesquisar" >
+                <input type="text" id="pesquisar" placeholder="Informe o nome da pessoa" style="font-size: 16px;">
                 <div class="procurarPessoa">
                     <img  src="assets/icons/procurar.svg" alt="">
                 </div>
@@ -56,7 +56,11 @@
                                 white-space: nowrap;
                                 font-family: Montserrat, sans-serif;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id cum nesciunt aspernatur, atque nisi pariatur eaque optio, hic magni soluta, voluptatum vel provident tenetur perspiciatis architecto. Totam facilis ex natus.</p>
                 </div>
-            </div>
+            </div> 
+        </div>
+        <!--Corpo de publicações-->
+        <div style="border: 3px solid red; width: 100%; height: 100vh;" class="body-principal">
+                
         </div>
 
 
