Adicionando eventos e retirando as linhas guia

--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -58,9 +58,46 @@
                 </div>
             </div> 
         </div>
-        <!--Corpo de publicações-->
-        <div style="border: 3px solid red; width: 100%; height: 100vh;" class="body-principal">
-                
+        <!--Corpo de púplicação-->
+        <div class="body-principal">
+                <div class="eventos">
+                    <div class="evento-info1">
+                        <div class="eventos-text">
+                            <h3>Nome do evento</h3>
+                            <p>Informações sobre o projeto</p>
+                        </div>
+                    </div>
+
+                    <div class="evento-info2">
+                        <div class="eventos-text">
+                            <h3>Nome do evento</h3>
+                            <p>Informações sobre o projeto</p>
+                        </div>
+                    </div>
+
+                    <div class="evento-info3">
+                        <div class="eventos-text">
+                            <h3>Nome do evento</h3>
+                            <p>Informações sobre o projeto</p>
+                        </div>
+                    </div>
+
+                    <div class="evento-info4">
+                        <div class="eventos-text">
+                            <h3>Nome do evento</h3>
+                            <p>Informações sobre o projeto</p>
+                        </div>
+                    </div>
+
+                    <div class="evento-info5">
+                        <div class="eventos-text">
+                            <h3>Nome do evento</h3>
+                            <p>Informações sobre o projeto</p>
+                        </div>
+                    </div>
+                </div>
+
+                </div>
         </div>
 
 
