Ultima alteração do dia 02/06

--- a/paginaPrincipal.html
+++ b/paginaPrincipal.html
@@ -11,7 +11,10 @@
     <div class="container" id="container">
         <div class="navBar">
             <div class="navBarTop">
-                 <img src="assets/icons/lar.svg" alt="">   
+                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 300 300">
+                    <polygon points="..." style="fill:#0562DC; stroke: #000; stroke-width: 5;" />
+                  </svg>
+                   
                  <img src="assets/icons/jogar.svg" alt=""> 
                  <img src="assets/icons/sino.svg" alt=""> 
                  <img src="assets/icons/configuracoes.svg" alt=""> 
