Alterações na página principal e apresentação

--- a/login.html
+++ b/login.html
@@ -16,10 +16,10 @@
 
         <div class="body-principal">
             <div class="login">
-                <input placeholder="Email/Telefone" type="text" name="" id="">
-                <input placeholder="Senha" type="password" name="" id="">
+                <input placeholder="Email/Telefone" type="text" name="" id="inputValor1" class="">
+                <input placeholder="Senha" type="password" name="" id="inputValor2" class="">
                 <div class="btn">
-                   <button id="btn-loginPrincipal" class="login-btn">Login</button>
+                   <button  id="btn-loginPrincipal" class="login-btn" onclick="verificar()"><a href="paginaPrincipal.html">Login</a></button>
                    <button>Esqueceu a Senha</button>
                 </div>
             </div>
